--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
       <div class="row no-gutters">
         <div class="col-lg-4" id="logoMain">
-          1. MAINCURES <img class="thumbnail" src="pics/manicures.JPG" />
+          1. MAINCURES <img class="thumbnail" src="pics/gel.jpg" />
         </div>
         <div class="col-lg-4" id="logoMain">
           2. PEDICURES <img class="thumbnail" src="pics/pedicure.jpg" />
@@ -50,18 +50,27 @@
     </div>
 
     <div class="navbar">
-      <div class="col-md-2"></div>
-      <div class="col-md-4" id="footer">
-        6450 Winchester Blvd<br />
-        Canal Winchester, OH 43110<br />(614)-834-5537
-      </div>
-      <div class="col-md-4" id="footer">
-        Monday - Friday: 10AM–7PM<br />
-        Saturday: 10AM–6PM<br />
-        Sunday: Closed
-      </div>
-      <div class="col-md-2"></div>
-    </div>
 
+      <div class="col-md-4" id="footer">
+        <h5><b>ADDRESS</b><br> 6450 Winchester Blvd<br />
+          Canal Winchester, OH 43110<br/>(614)-834-5537</h5>
+   
+      </div>
+      <div class="col-md-4" id="footer">
+
+        <h5>        
+          <b>PANDEMIC HOURS:</b> <br>
+          Monday - Friday: 10AM–6PM<br />
+          Saturday: 10AM–5PM<br />
+          Sunday: Closed</h5>
+      </div>
+      <div class="col-md-4" id="footer">
+        <h5>        
+          <b>NORMAL HOURS:</b> <br>
+          Monday - Friday: 10AM–7PM<br />
+          Saturday: 10AM–6PM<br />
+          Sunday: Closed</h5>
+      </div>
+    </div>
   </body>
 </html>
