--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
       <div class="row no-gutters">
         <div class="col-lg-4" id="logoMain">
-          1. MAINCURES <img class="thumbnail" src="pics/gel.jpg" />
+          1. MANICURES <img class="thumbnail" src="pics/gel.jpg" />
         </div>
         <div class="col-lg-4" id="logoMain">
           2. PEDICURES <img class="thumbnail" src="pics/pedicure.jpg" />
@@ -59,14 +59,14 @@
       <div class="col-md-4" id="footer">
 
         <h6>        
-          <b>PANDEMIC HOURS:</b> <br>
+          <b>PANDEMIC HOURS</b><br>
           Monday - Friday: 10AM–6PM<br />
           Saturday: 10AM–5PM<br />
           Sunday: Closed</h6>
       </div>
       <div class="col-md-4" id="footer">
         <h6>        
-          <b>NORMAL HOURS:</b> <br>
+          <b>NORMAL HOURS</b><br>
           Monday - Friday: 10AM–7PM<br />
           Saturday: 10AM–6PM<br />
           Sunday: Closed</h6>
