--- a/index.html
+++ b/index.html
@@ -62,64 +62,6 @@
         </div>
       </header>
     </div>
-    <!-- SKILLS -->
-    <!-- <div
-      id="section2"
-      class="container-fluid"
-      style="padding-top: 70px; padding-bottom: 70px"
-    >
-    <div class="row sectionBanner">
-      <div class="col-md-12 d-flex justify-content-center"><h2>SKILLS</h2></div>
-    </div>
-
-      <div class = "container">
-      <div class="row text-center">
-      <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-warning"></i>
-              <i class="fas fa-flask fa-stack-1x fa-inverse"></i>
-            </span>
-            <h2 class="my-3">RESEARCHER</h2>
-            <p class="text-muted">
-              Years of experience in the research field have honed my investigative, diagnostic, and problem-solving skills which have carried over to my software development career.
-            </p>
-            <p>
-              "Research is creating new knowledge"
-              <br> -Neil Armstrong-
-            </p>
-          </div>
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-danger"></i>
-              <i class="fas fa-laptop-code fa-stack-1x fa-inverse"></i>
-            </span>
-            <h2 class="my-3">FULL STACK DEVELOPER</h2>
-
-            <p class="text-muted">
-              In a field that is always updating, my motivation and excitement fuel my growth and learning. From front-end to back-end, my skills are expanding at an exponential rate with each new project and framework. 
-            </p>            
-            <p>
-              "Make it work, make it right, make it fast"<br>-Kent Beck-
-            </p>
-          </div>
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-warning"></i>
-              <i class="fas fa-users fa-stack-1x fa-inverse"></i>
-            </span>
-            <h2 class="my-3">TEAM PLAYER</h2>
-            <p class="text-muted">
-              Working in a lab, hospital, and volunteer environment has taught me how to adapt to any team, capitalize its strengths, and to fill in its weaknesses. 
-            </p>            
-            <p>
-            <p>
-              "None of us is as smart as all of us"<br>-Ken Blanchard-
-            </p>
-          </div>
-      </div>
-    </div>
-    </div>
-    -->
     <div
       id="section2"
       class="container-fluid"
@@ -138,7 +80,7 @@
           <div class="container port-box d-flex row align-items-end justify-content-center">
             <div class = "link">
             <img
-              class = "img-fluid"
+              class = "img-fluid main-icon"
               style="width: 100%"
               data-toggle="modal"
               data-target="#myModal1"
@@ -163,11 +105,12 @@
                   <div class="modal-body">
                     <div class = "container d-flex justify-content-center">
                       <img style = "width: 300px; height: auto;"
-                      src = "pics/divider2.png">
+                      src = "pics/divider3.png">
                     </div>
                     <div class = "container d-flex justify-content-center">
-                      <h2>Specials</h2>
+                      <h2 class = "service-title">Specials</h2>
                         <ul>
+                          <li class = "service-small"><h2>Specials</h2></li>
                           <li><b>Classic</b> -- Shape nails, buffer, massage, and polish</li>
                           <li><b>Signature</b> -- Lavendar scrub, blue mask exfoliation, and moisturizing treatment</li>
                           <li><b>Milk & Honey</b> -- Honey sugar scrub and milky butter cream moisturizing treatment</li>
@@ -176,12 +119,13 @@
                     </div>
                     <div class = "container d-flex justify-content-center">
                       <img style = "width: 300px; height: auto; transform: scaleX(-1) scaleY(-1);"
-                      src = "pics/divider2.png">
+                      src = "pics/divider3.png">
                     </div>
                     <div class = "container d-flex justify-content-center">
-                      <h2>Artificial</h2>
+                      <h2 class = "service-title">Artificial</h2>
                         <ul>
-                          <li><b>We provide many shapes, including Coffin!</b></li>
+                          <li class = "service-small"><h2>Artificial</h2></li>
+                          <li><b>We provide many shapes, including Coffin-shaped!</b></li>
                           <li>Acrylic Full Set</li>
                           <li>Acrylic Balance</li>
                           <li>Acrylic Overlay</li>
@@ -216,7 +160,7 @@
           <div class="container port-box d-flex row align-items-end justify-content-center">
             <div class = "link">
             <img
-              class = "img-fluid"
+              class = "img-fluid main-icon"
               style="width: 100%"
               data-toggle="modal"
               data-target="#myModal2"
@@ -244,8 +188,9 @@
                       src = "pics/divider3.png">
                     </div>
                     <div class = "container d-flex justify-content-center">
-                      <h2>Specials</h2>
+                      <h2 class = "service-title">Special Pedicures</h2>
                         <ul>
+                          <li class = "service-small"><h2>Special Pedicures</h2></li>
                           <li><b>Classic</b> -- Shape nails, buffer, callus removal, massage, and polish</li>
                           <li><b>Signature</b> -- Exfoliating sea salt scrub, soothing peppermint, and rejuvenating hot towel wrap</li>
                           <li><b>French or Color Tip</b> -- Classic pedicure with a white or color tip polish</li>
@@ -274,7 +219,7 @@
           <div class="container port-box d-flex row align-items-end justify-content-center">
             <div class = "link">
             <img
-              class = "img-fluid"
+              class = "img-fluid main-icon"
               style="width: 100%"
               data-toggle="modal"
               data-target="#myModal3"
@@ -303,13 +248,14 @@
                       src = "pics/divider.jpg">
                     </div>
                     <div class = "container d-flex justify-content-center">
-                      <h2>Waxing</h2>
+                      <h2 class = "service-title">Waxing</h2>
                         <ul>
-                          <li><b>Full Face</b></li>
-                          <li><b>Upper Lip</b></li>
-                          <li><b>Chin</b></li>
-                          <li><b>Eyebrow</b></li>
-                          <li><b>Sideburns</b></li>
+                          <li class = "service-small"><b>Waxing</b></li>
+                          <li>Full Face</li>
+                          <li>Upper Lip</li>
+                          <li>Chin</li>
+                          <li>Eyebrow</li>
+                          <li>Sideburns</li>
                         </ul>
                     </div>
                   </div>
@@ -344,21 +290,21 @@
     >
       <div class="container thanks">
         <div class="row">
-          <div class="col-md-12 d-flex justify-content-center "><h2>CONTACT ME</h2></div>
+          <div class="col-md-12 d-flex justify-content-center "><h1>About</h1></div>
         </div>
         <div class="row ">
-          <div class="col-md-12 d-flex justify-content-center">Thank you for visiting!</div>
+          <div class="col-md-12 d-flex justify-content-center">Hope to see you soon!</div>
+        </div>
+        <div class="row ">
+          <div class="col-md-12 d-flex justify-content-center"><img src="pics/ClassicNailsFront.JPG" style="width: 80%;"></img>></div>
         </div>
         <div class="d-flex row justify-content-center">
-
+          <div style = "margin-top: 50px" class = "d-flex col-md-6 justify-content-center text-center"><span><b>Address</b><br>6450 Winchester Blvd<br>Canal Winchester, OH 43110</span></div>
+          <div style = "margin-top: 50px" class = "d-flex col-md-6 justify-content-center text-center"><span><b>Hours</b><br>Monday-Friday: 10AM - 7PM <br>Saturday: 10AM - 6PM <br>Sunday: Closed</span>
+          </div>
         </div>
         <br>
-        <div class="d-flex row justify-content-center">&#128231 thekphantastic@gmail.com</div>
-        <div class="d-flex row justify-content-center">&#9742 (614)-330-7079</div>
-        <div> 
-        <div class="d-flex row justify-content-center"><span><a href = "https://www.linkedin.com/in/kev-phan/"><i class="fab fa-linkedin" style="width: 60px; height: auto;"></i></a></span>
-          <span><a href = "https://github.com/kphanplan"><i class="fab fa-github" style="width: 60px; height: auto;"></i></a></span></div>
-        </div>
+        <div class="d-flex row justify-content-center" style = "padding-bottom: 50px;">&#9742 (614) 834-5537</div>
       </div>
     </div>
     <!-- Bootstrap core JS-->
