--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <h3 class="modal-title">MANICURES</h3>
                   </div>
                   <div class="modal-body">
-                    <div class = "container d-flex justify-content-center">
+                    <div class = "container d-flex justify-content-center align-items-start">
                       <img style = "width: 300px; height: auto;"
                       src = "pics/divider3.png">
                     </div>
@@ -183,7 +183,7 @@
                     <h2 class="modal-title">PEDICURES</h2>
                   </div>
                   <div class="modal-body">
-                    <div class = "container d-flex justify-content-center">
+                    <div class = "container d-flex justify-content-center align-items-start">
                       <img style = "width: 300px; height: auto;"
                       src = "pics/divider3.png">
                     </div>
@@ -243,7 +243,7 @@
                     <h4 class="modal-title">WAXING</h4>
                   </div>
                   <div class="modal-body">
-                    <div class = "container d-flex justify-content-center">
+                    <div class = "container d-flex justify-content-center align-items-start">
                       <img style = "width: 300px; height: auto;"
                       src = "pics/divider.jpg">
                     </div>
@@ -296,7 +296,7 @@
           <div class="col-md-12 d-flex justify-content-center">Hope to see you soon!</div>
         </div>
         <div class="row ">
-          <div class="col-md-12 d-flex justify-content-center"><img src="pics/ClassicNailsFront.JPG" style="width: 80%;"></img>></div>
+          <div class="col-md-12 d-flex justify-content-center"><img src="pics/ClassicNailsFront.JPG" style="width: 80%;"></img></div>
         </div>
         <div class="d-flex row justify-content-center">
           <div style = "margin-top: 50px" class = "d-flex col-md-6 justify-content-center text-center"><span><b>Address</b><br>6450 Winchester Blvd<br>Canal Winchester, OH 43110</span></div>
