--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   <div class="modal-body">
                     <div class = "container d-flex justify-content-center align-items-start">
                       <img style = "width: 300px; height: auto;"
-                      src = "pics/divider3.png">
+                      src = "pics/divider.jpg">
                     </div>
                     <div class = "container d-flex justify-content-center">
                       <h2 class = "service-title">Specials</h2>
@@ -119,7 +119,7 @@
                     </div>
                     <div class = "container d-flex justify-content-center">
                       <img style = "width: 300px; height: auto; transform: scaleX(-1) scaleY(-1);"
-                      src = "pics/divider3.png">
+                      src = "pics/divider.jpg">
                     </div>
                     <div class = "container d-flex justify-content-center">
                       <h2 class = "service-title">Artificial</h2>
@@ -185,7 +185,7 @@
                   <div class="modal-body">
                     <div class = "container d-flex justify-content-center align-items-start">
                       <img style = "width: 300px; height: auto;"
-                      src = "pics/divider3.png">
+                      src = "pics/divider.jpg">
                     </div>
                     <div class = "container d-flex justify-content-center">
                       <h2 class = "service-title">Special Pedicures</h2>
@@ -296,7 +296,7 @@
           <div class="col-md-12 d-flex justify-content-center">Hope to see you soon!</div>
         </div>
         <div class="row ">
-          <div class="col-md-12 d-flex justify-content-center"><img src="pics/ClassicNailsFront.JPG" style="width: 80%;"></img></div>
+          <div class="col-md-12 d-flex justify-content-center align-items-start"><img src="pics/ClassicNailsFront.JPG" style="width: 80%; height: auto;"></img></div>
         </div>
         <div class="d-flex row justify-content-center">
           <div style = "margin-top: 50px" class = "d-flex col-md-6 justify-content-center text-center"><span><b>Address</b><br>6450 Winchester Blvd<br>Canal Winchester, OH 43110</span></div>
