--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&family=Rubik:wght@300;500;700&display=swap" rel="stylesheet"> 
     <script
       src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"
       crossorigin="anonymous"
@@ -18,6 +18,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    
     <link rel="stylesheet" href="dos.css" />
   </head>
   <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -69,7 +70,7 @@
     > 
       <!-- 1 -->
       <div class="row">
-        <div class="col-md-12 d-flex justify-content-center "><h2>SERVICES</h2></div>
+        <div class="col-md-12 d-flex justify-content-center "><h1>SERVICES</h1></div>
       </div>
       <div class="row">
         <div class="col-md-12 d-flex justify-content-center">Click each image to learn more</div>
@@ -105,45 +106,52 @@
                   <div class="modal-body">
                     <div class = "container d-flex justify-content-center align-items-start">
                       <img style = "width: 300px; height: auto;"
-                      src = "pics/divider.jpg">
+                      src = "pics/divider2.png">
                     </div>
                     <div class = "container d-flex justify-content-center">
-                      <h2 class = "service-title">Specials</h2>
-                        <ul>
+                      <h2 class = "service-title" >Specials</h2>
+                        <ul style = "list-style-type: none;">
                           <li class = "service-small"><h2>Specials</h2></li>
+                          <li><b><i class="fas fa-star"></i>Gel</i></b> -- Most Popular! Manicure with gel polish that lasts up to 2-3 weeks!</li>
                           <li><b>Classic</b> -- Shape nails, buffer, massage, and polish</li>
                           <li><b>Signature</b> -- Lavendar scrub, blue mask exfoliation, and moisturizing treatment</li>
                           <li><b>Milk & Honey</b> -- Honey sugar scrub and milky butter cream moisturizing treatment</li>
-                          <li><b><i class="fas fa-star"></i>Gel</i></b> -- Most Popular! Manicure with gel polish that lasts up to 2-3 weeks!</li>
                         </ul>
                     </div>
-                    <div class = "container d-flex justify-content-center">
+                    <div class = "container d-flex justify-content-center align-items-start">
                       <img style = "width: 300px; height: auto; transform: scaleX(-1) scaleY(-1);"
-                      src = "pics/divider.jpg">
+                      src = "pics/divider2.png">
                     </div>
                     <div class = "container d-flex justify-content-center">
                       <h2 class = "service-title">Artificial</h2>
                         <ul>
                           <li class = "service-small"><h2>Artificial</h2></li>
-                          <li><b>We provide many shapes, including Coffin-shaped!</b></li>
+                          <li style = "list-style-type: none;"><b>We provide many shapes, including Coffin-shaped!</b></li>
                           <li>Acrylic Full Set</li>
                           <li>Acrylic Balance</li>
                           <li>Acrylic Overlay</li>
+                          <li style = "list-style-type: none;"></li>____________________</li>
                           <li>White French Tip Full Set</li>
                           <li>Pink & White Full Set</li>
                           <li>Pink & White Balance</li>
-                          <li>---------------------</li>
-                          <li>Pollish Change</li>
+                          <li>Ombre Full Set</li>
+                          <li>Ombre Balance</li>
+                          <li style = "list-style-type: none;"></li>____________________</li>
+                          <li>Dipping Powder</li>
+                          <li>Polish Change</li>
                           <li>Nail Repair</li>
                           <li>Polish Removal and Manicure</li>
+
+ 
                         </ul>
                     </div>
                   </div>
-                  <div class="modal-footer">
+                  <div class="modal-footer justify-content-center">
                     <button
                       type="button"
-                      class="btn btn-default"
+                      class="btn btn-primary"
                       data-dismiss="modal"
+                      style="width: 60%; height: auto;"
                     >
                       BACK
                     </button>
@@ -185,26 +193,28 @@
                   <div class="modal-body">
                     <div class = "container d-flex justify-content-center align-items-start">
                       <img style = "width: 300px; height: auto;"
-                      src = "pics/divider.jpg">
+                      src = "pics/divider3.png">
                     </div>
                     <div class = "container d-flex justify-content-center">
                       <h2 class = "service-title">Special Pedicures</h2>
-                        <ul>
+                        <ul style = "list-style-type: none;">
                           <li class = "service-small"><h2>Special Pedicures</h2></li>
+                          <li><b><i class="fas fa-star"></i>Milk & Honey</i></b> -- Pedicure with exfoliating honey sugar scrub, butter cream moisturizer, and knee-high hot towel wrap</li>
+                          <li><b>French or Color Tip</b> -- Classic pedicure with a white or color tip polish</li>
+                          <li><b>Gel</b> -- Pedicure with gel color polish that lasts up to 3-4 weeks!</li>
                           <li><b>Classic</b> -- Shape nails, buffer, callus removal, massage, and polish</li>
                           <li><b>Signature</b> -- Exfoliating sea salt scrub, soothing peppermint, and rejuvenating hot towel wrap</li>
-                          <li><b>French or Color Tip</b> -- Classic pedicure with a white or color tip polish</li>
-                          <li><b><i class="fas fa-star"></i>Milk & Honey</i></b> -- Pedicure with exfoliating honey sugar scrub, butter cream moisturizer, and knee-high hot towel wrap</li>
                         </ul>
                     </div>
                   </div>
-                  <div class="modal-footer">
+                  <div class="modal-footer justify-content-center">
                     <button
                       type="button"
-                      class="btn btn-default"
+                      class="btn btn-primary"
                       data-dismiss="modal"
+                      style="width: 60%; height: auto;"
                     >
-                      Close
+                      BACK
                     </button>
                   </div>
                 </div>
@@ -259,13 +269,14 @@
                         </ul>
                     </div>
                   </div>
-                  <div class="modal-footer">
+                  <div class="modal-footer justify-content-center">
                     <button
                       type="button"
-                      class="btn btn-default"
+                      class="btn btn-primary"
                       data-dismiss="modal"
+                      style="width: 60%; height: auto;"
                     >
-                      Close
+                      BACK
                     </button>
                   </div>
                 </div>
@@ -273,38 +284,62 @@
             </div>
           </div>
         </div>
-
-        <!-- 4 -->
-
-        <!-- 5 -->
-
-        <!-- 6 -->
       </div>
-
-      <!-- Next row--follow pattern every 6-->
 </div>
     <!-- CONTACT ME -->
     <div
       id="section3"
       class="container-fluid"
     >
-      <div class="container thanks">
+      <div class="container thanks justify-content-center">
         <div class="row">
-          <div class="col-md-12 d-flex justify-content-center "><h1>About</h1></div>
+          <div class="col-md-12 d-flex justify-content-center" style = "margin-top: 30px"><h1>About</h1></div>
         </div>
         <div class="row ">
-          <div class="col-md-12 d-flex justify-content-center">Hope to see you soon!</div>
+          <div class="col-md-12 d-flex justify-content-center"> 
+            <div class="d-flex row justify-content-center" style = "padding-bottom: 30px;">&#9742 (614) 834-5537</div>
+          </div>
         </div>
-        <div class="row ">
-          <div class="col-md-12 d-flex justify-content-center align-items-start"><img src="pics/ClassicNailsFront.JPG" style="width: 80%; height: auto;"></img></div>
+        <!-- CAROUSEL -->
+        <div id="demo" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ul class="carousel-indicators">
+            <li data-target="#demo" data-slide-to="0" class="active"></li>
+            <li data-target="#demo" data-slide-to="1"></li>
+            <li data-target="#demo" data-slide-to="2"></li>
+            <li data-target="#demo" data-slide-to="3"></li>
+          </ul>
+          <!-- The slideshow -->
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="pics/ClassicNailsFront.JPG" alt="Front" width="100%" height="auto">
+            </div>
+            <div class="carousel-item">
+              <img src="pics/cars1.JPG" alt="Polishes" width="100%" height="auto">
+            </div>
+            <div class="carousel-item">
+              <img src="pics/cars2.JPG" alt="Covid tables" width="100%" height="auto">
+            </div>
+            <div class="carousel-item">
+              <img src="pics/cars3.JPG" alt="Covid tables" width="100%" height="auto">
+            </div>
+          </div>
+          
+          <!-- Left and right controls -->
+          <a class="carousel-control-prev" href="#demo" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </a>
+          <a class="carousel-control-next" href="#demo" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </a>
         </div>
+        <!-- HOURS -->
         <div class="d-flex row justify-content-center">
           <div style = "margin-top: 50px" class = "d-flex col-md-6 justify-content-center text-center"><span><b>Address</b><br>6450 Winchester Blvd<br>Canal Winchester, OH 43110</span></div>
-          <div style = "margin-top: 50px" class = "d-flex col-md-6 justify-content-center text-center"><span><b>Hours</b><br>Monday-Friday: 10AM - 7PM <br>Saturday: 10AM - 6PM <br>Sunday: Closed</span>
+          <div style = "margin-top: 50px" class = "d-flex col-md-6 justify-content-center text-center"><span><b>Hours <br>(May close earlier due to COVID) </b><br>Mon-Fri: 10AM - 7PM <br>Sat: 10AM - 6PM <br>Sun: Closed</span>
           </div>
         </div>
         <br>
-        <div class="d-flex row justify-content-center" style = "padding-bottom: 50px;">&#9742 (614) 834-5537</div>
       </div>
     </div>
     <!-- Bootstrap core JS-->
