--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>🛀 Classic Nails and Spa</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta property="og:title" content="Classic Nails and Spa/>
+    <meta property="og:title" content="Classic Nails and Spa"/>
     <meta property='og:image' content="https://images.unsplash.com/photo-1493799817216-4b57dda4229f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1052&q=80"/>
     <link
       rel="stylesheet"
