--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>🛀 Classic Nails and Spa</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta property="og:title" content="Classic Nails and Spa"/>
+    <meta property="og:title" content="Classic Nails and Spa>
+    <meta property="og:image" content="">
+    <meta property='og:title' content='Kevin Phan Portfolio'/>
     <meta property='og:image' content="https://images.unsplash.com/photo-1493799817216-4b57dda4229f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1052&q=80"/>
     <link
       rel="stylesheet"
@@ -90,7 +92,7 @@
             </div>
             <div class = "caption text-center">
               <h2>MANICURES</h2>
-              <p>- Gel - Artificial -</p>
+              <p>- Click to learn more -</p>
             </div>
             <!-- Modal -->
             <div class="modal fade" id="myModal1" role="dialog">
@@ -177,7 +179,7 @@
             </div>
             <div class = "caption text-center">
               <h2>PEDICURES</h2>
-              <p>- Signature -</p>
+              <p>- Click to learn more -</p>
             </div>
             <!-- Modal -->
             <div class="modal fade" id="myModal2" role="dialog">
@@ -238,7 +240,7 @@
             </div>
             <div class = "caption text-center">
               <h2>WAXING</h2>
-              <p>- Facial Waxing -</p>
+              <p>- Click to learn more -</p>
             </div>
 
             <!-- Modal -->
